--- a/RedisNeo2/Views/Biblioteka/AddBibliotekaPage.cshtml
+++ b/RedisNeo2/Views/Biblioteka/AddBibliotekaPage.cshtml
@@ -54,7 +54,9 @@
                 }
                 <div class="form-group pt-3">
                     <button type="submit">Register</button>
-                    <p><a href="/Biblioteka/LoginBibliotekaPage"> LoginBiblioteka </a></p>
+                    <br /><br />
+                    <p<label for="lab12">Vec imas nalog? Loginuj se</label></p>
+                    <p><a href="/Login/LoginPage"> Login </a></p>
                     <p><a href="/Biblioteka/GetAll">Sve biblioteke</a></p>
                 </div>
             </form>
