--- a/RedisNeo2/Views/Biblioteka/UnsuccessfullyDeletedBiblioteka.cshtml
+++ b/RedisNeo2/Views/Biblioteka/UnsuccessfullyDeletedBiblioteka.cshtml
@@ -4,5 +4,4 @@
 @{
 }
 
-<h2>Ne postoji takva Biblioteka!</h2>
-    <p> <a href="/Login/LoginPage">Login again</a> </p>
+<h2>Greška pri brisanju biblioteke!</h2>
