--- a/RedisNeo2/Views/Biblioteka/UpdateBiblioteka.cshtml
+++ b/RedisNeo2/Views/Biblioteka/UpdateBiblioteka.cshtml
@@ -7,7 +7,7 @@
 
 <form asp-action="UpdateN" method="POST">
                 <div class="form-group">
-                    <label asp-for="NovaLozinka">NovaLozinka</label>
+                    <label asp-for="NovaLozinka">Nova lozinka:</label>
                     <input type="text" class="form-control" asp-for="NovaLozinka" />
                     <span asp-validation-for="NovaLozinka" class="text-danger"></span>
                 </div>
