--- a/RedisNeo2/Views/Korisnik/AddKorisnikPage.cshtml
+++ b/RedisNeo2/Views/Korisnik/AddKorisnikPage.cshtml
@@ -60,8 +60,10 @@
                 }
                 <div class="form-group pt-3">
                     <button type="submit">Register</button>
-                    <p><a href="/Login/LoginPage"> LoginKorisnik </a></p>
-                    <p><a href="/Korisnik/GetAll">Svi Korisnici</a></p>
+                    <br /><br />
+                    <p<label for="lab12">Vec imas nalog? Loginuj se</label></p>
+                    <p><a href="/Login/LoginPage"> Login </a></p>
+                    @* <p><a href="/Korisnik/GetAll">Svi Korisnici</a></p> *@
                 </div>
             </form>
         </div>
