--- a/RedisNeo2/Views/Korisnik/NePostojeciKorisnik.cshtml
+++ b/RedisNeo2/Views/Korisnik/NePostojeciKorisnik.cshtml
@@ -4,5 +4,5 @@
 @{
 }
 
-<h2>Ne postoji takva Biblioteka!</h2>
+<h2>Ne postoji takav korisnik!</h2>
     <p> <a href="/Login/LoginPage">Login again</a> </p>
