--- a/RedisNeo2/Views/Korisnik/SuccessfullyDeletedKorisnik.cshtml
+++ b/RedisNeo2/Views/Korisnik/SuccessfullyDeletedKorisnik.cshtml
@@ -4,4 +4,5 @@
 @{
 }
 
-<h2>Vec postoji takav korisnik</h2>
+<h2>Uspešno izbrisan korisnik!</h2>
+    <p> <a href="/Login/LoginPage">Login</a> </p>
