--- a/RedisNeo2/Views/Biblioteka/GetAll.cshtml
+++ b/RedisNeo2/Views/Biblioteka/GetAll.cshtml
@@ -5,7 +5,7 @@
 @{
 }
 
-<h1>Gett all</h1>
+<h1>Učlanjenje u biblioteku</h1>
 
 <div class="container pt-5">
     <div class="row">
@@ -15,7 +15,7 @@
     </div>
     <div class="row">
         <div class="col-md-6">
-            <h3>Authors</h3>
+            <h3>Biblioteke</h3>
 
             <table  class="table table-stripped table-bordered table-dark">
                 <thead>
@@ -25,6 +25,7 @@
                         <th>Kontakt telefon</th>
                        @* <th>Lokacija</th>*@
                         <th>Adresa</th>
+                        <th>Učlanjenje</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -33,8 +34,16 @@
                         <td>@item.Naziv</td>
                         <td>@item.Email</td>
                         <td>@item.KontaktTelefon</td>
-                        @*<td>@item.Kategorije</td>*@
                         <td>@item.Adresa</td>
+                            <td>
+                                @* Zato sto ne moze normalna forma unutar tabele *@
+                                @using (Html.BeginForm("UclaniSeUBibl", "Korisnik",
+                                   new { mail = @item.Email },
+                                                     FormMethod.Post))
+                                {
+                                    <input type="submit" value="Učlani se" />
+                                }
+                            </td>
                     </tr>
                     }
                 </tbody>
