--- a/RedisNeo2/Views/Biblioteka/LoggedInBiblioteka.cshtml
+++ b/RedisNeo2/Views/Biblioteka/LoggedInBiblioteka.cshtml
@@ -1,14 +1,21 @@
-﻿@*
+﻿@using System.Security.Claims
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+
 @{
+    var a = Context.User.FindFirstValue(ClaimTypes.Email);
 }
 
-<h1>Dobrodosla Biblioteka</h1>
+<h1>Dobrodosla @a</h1>
+    <p> <a href="/Chat/ChatVjuBiblioteka">Chat</a> </p>    
+    <p> <a href="/Biblioteka/UpdateBiblioteka"><br />Izmeni lozniku</a> </p>
+
 <form method="post" asp-controller="Biblioteka" asp-action="Logout">
     <button class="btn btn-info">Logout</button>
-    
-    <a href="/Chat/ChatVjuBiblioteka">Chat</a>
-    <a href="/Dogadjaj/AddEventPage"> Objavi Dogadjaj</a>
-    <p> <a href="/Biblioteka/UpdateBiblioteka">Izmeni lozniku</a> </p>
+</form>
+<br />
+<form method="post" asp-controller="Biblioteka" asp-action="DeleteBiblioteka">
+    @Html.AntiForgeryToken()
+    <button class="btn btn-danger">Delete Biblioteka</button>
 </form>
