--- a/RedisNeo2/Views/Biblioteka/SuccessfullyDeletedBiblioteka.cshtml
+++ b/RedisNeo2/Views/Biblioteka/SuccessfullyDeletedBiblioteka.cshtml
@@ -3,4 +3,6 @@
 *@
 @{
 }
-<h2>NEspesna prijava na dogadjaj</h2>
+
+<h2>Uspešno izbrisana biblioteka!</h2>
+    <p> <a href="/Login/LoginPage">Login</a> </p>
