--- a/RedisNeo2/Views/Home/Index.cshtml
+++ b/RedisNeo2/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
 <div class="text-center">
     
     <h1 class="display-4">Imas li nalog?</h1>
-    <p>Ukoliko imas <a href="/Login/LoginPage"> loginuj se </a></p>
+    <p>Ukoliko imas <a href="/Login/LoginPage"> <br />Login </a></p>
+    <br />
     <label for="lab1">Ukoliko nemas: REGISTRACIJA</label>
     
            
