--- a/RedisNeo2/Views/Login/LoginKorisnik.cshtml
+++ b/RedisNeo2/Views/Login/LoginKorisnik.cshtml
@@ -6,7 +6,7 @@
 @{
 }
 
-<h1>Login Biblioteka view</h1>
+<h1>Login Korisnik view</h1>
 
 
 <div class = "container pt-5">
@@ -24,11 +24,6 @@
                     <input type="text" class="form-control" asp-for="Lozinka" />
                     <span asp-validation-for="Lozinka" class="text-danger"></span>
                 </div>
-               @* <div class="form-group">
-                    <label asp-for="Kategorije ">Kategorije *</label>
-                    <input type="text" class="form-control" asp-for="Kategorije" />
-                    <span asp-validation-for="Kategorije" class="text-danger"></span>
-                </div>*@
                 
 
                 @if (TempData["msg"] != null)
