--- a/RedisNeo2/Views/Chat/ChatVjuBiblioteka.cshtml
+++ b/RedisNeo2/Views/Chat/ChatVjuBiblioteka.cshtml
@@ -1,45 +1,63 @@
 ﻿@model RedisNeo2.Models.DTOs.PorukaDTO
+@using System.Security.Claims
 
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+
 @{
+    var p = ViewBag.PORUKA;
+    var k = ViewBag.BIBLIOTEKA;
+    var user = Context.User.FindFirstValue(ClaimTypes.Email);
 }
 
-<form method = "post" asp-controller="Korisnik" asp-action="Logout">
-    <button class="btn btn-info">Logout</button>
-</form>
 
-   <div class="container">
-        <div class="row p-1">
-            <div class="col-1"></div>
-             <label for="userNPB">BIBLIOTEKA_USER </label>
-             <div class="col-5"><span id="userNPB" /></div>
-        </div>
-        <div class="row p-1">
-            <div class="col-1">Message</div>
-            <div class="col-5"><input type="text" class="w-100" id="messageInput" /></div>
-        </div>
-        <div class="row p-1">
-            <div class="col-1">Receiver</div>
-            <div class="col-5"><input type="text" class="w-100" id="receiverId" /></div>
-        </div>
-        <div class="row p-1">
-            <div class="col-6 text-end">
-            <input type="button" id="sendButtonBiblioteka" value="Send Message To All" />
-                
-            </div>
-        </div>
-        <div class="row p-1">
-            <div class="col-6">
-                <hr />
-            </div>
-        </div>
-        <div class="row p-1">
-            <div class="col-6">
-                <ul id="messagesList"></ul>
-            </div>
+<div class="container">
+    <div class="row p-1">
+        <div class="col-1"></div>
+        <label for="userKorisnik">CHAT BIBLIOTEKE </label>
+        <div class="col-5"><span id="userKorisnik" /></div>
+    </div>
+    <div class="row p-1">
+        <div class="col-1">Message</div>
+        <div class="col-5"><input type="text" class="w-100" id="messageInput" /></div>
+    </div>
+    <div class="row p-1">
+        <div class="col-6 text-end">
+            <input type="button" id="sendButtonKorisnik" value="Posalji svima" />
+
         </div>
     </div>
+    <div class="row p-1">
+        <div class="col-6">
+            <hr />
+        </div>
+    </div>
+    <div class="row p-1">
+        <div class="col-6">
+            <ul id="messagesList"></ul>
+        </div>
+    </div>
+</div>
+<form asp-action="Send" method="post" asp-controller="Chat">
+    <div class="form-group">
+        <label asp-for="Receiver ">Receiver</label>
+        <input type="text" class="form-control" asp-for="Receiver" />
+        <span asp-validation-for="Receiver" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Poruka ">Poruka</label>
+        <input type="text" class="form-control" asp-for="Poruka" />
+        <span asp-validation-for="Poruka" class="text-danger"></span>
+    </div>
+    <input type="submit" id="salji" value="Posalji privatnu poruku" />
+</form>
+<hr />
+<form method="get" asp-controller="Chat" asp-action="Receive">
+    <input type="submit" id="primi" value="Poslednja privatna poruka" />
+    <div class="form-group">
+        <p>@p</p>
+        <p>@k</p>
+        <br />
+    </div>
+
+</form>
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/chatBiblioteka.js"></script>
+<script src="~/js/chatK.js"></script>
