--- a/RedisNeo2/Views/Chat/ChatVjuKorisnik.cshtml
+++ b/RedisNeo2/Views/Chat/ChatVjuKorisnik.cshtml
@@ -21,7 +21,7 @@
         </div>
         <div class="row p-1">
             <div class="col-6 text-end">
-                <input type="button" id="sendButtonKorisnik" value="Send Message To All" />
+                <input type="button" id="sendButtonKorisnik" value="Posalji svima" />
                 
             </div>
         </div>
@@ -47,11 +47,11 @@
                 <input type="text" class="form-control" asp-for="Poruka" />
                 <span asp-validation-for="Poruka" class="text-danger"></span>
          </div>
-        <input type="submit" id="salji" value="Posalji poruku" />
+        <input type="submit" id="salji" value="Posalji privatnu poruku" />
     </form>
     <hr/>
     <form method="get" asp-controller="Chat" asp-action="Receive">
-        <input type="submit" id="primi" value="Primi poruku" />
+        <input type="submit" id="primi" value="Poslednja privatna poruka" />
          <div class="form-group">
              <p>@p</p>
              <p>@k</p>
