--- a/RedisNeo2/Views/Biblioteka/Biblioteka.cshtml
+++ b/RedisNeo2/Views/Biblioteka/Biblioteka.cshtml
@@ -10,7 +10,7 @@
 <p> <a href="/Biblioteka/AddBibliotekaPage">Dodaj Novu Biblioteku</a> </p>
 
 
-@if(currentLogedInUser == "Korisnik")
+@* @if(currentLogedInUser == "Korisnik")
 {
-    <h3> <a asp-controller="Chat" asp-action="ChatVju">Chatuj sa bibliotekom</a> </h3>
-}
+    <h3> <a asp-controller="Chat" asp-action="ChatVjuKorisnik">Chatuj sa bibliotekom</a> </h3>
+} *@
